# backup_app_rust

./: CHANGELOG.md  Cargo.toml  Dockerfile.ubuntu20.04  Makefile  README.md
.github/workflows/: rust.yml
scripts/: Dockerfile  build_deb_docker.sh  generate_postgres_toml.py
src/: backup_opts.rs  config.rs  lib.rs  main.rs  s3_instance.rs
tests/data/: test_config.toml  test_local_config.toml
