[package]
name = "backup_app_rust"
version = "0.4.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "backup-app-rust"
priority = "optional"
section = "rust"
provides = "backup-app-rust"
extended-description = """\
Backup utility written in rust"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56"
aws-sdk-s3 = "0.31"
clap = {version="4.0", features=["derive"]}
deadqueue = "0.2"
derive_more = "0.99"
dirs = "5.0"
env_logger = "0.10"
flate2 = "1.0"
futures = "0.3"
itertools = "0.11"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.13"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.5"
serde = {version="1.0", features=["derive"]}
stack-string = "0.8"
tempfile = "3.2"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = { version="1.21", features=["full"]}
toml = "0.8"
url = "2.2"

[dev-dependencies]
maplit = "1.0"

[[bin]]
name = "backup-app-rust"
path = "src/main.rs"
doc = false
