[package]
name = "backup_app_rust"
version = "0.4.8"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "backup-app-rust"
priority = "optional"
section = "rust"
provides = "backup-app-rust"
extended-description = """Backup utility written in rust"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.5", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.69"
clap = {version="4.0", features=["derive"]}
deadqueue = "0.2"
derive_more = {version="1.0", features = ["full"]}
dirs = "6.0"
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
flate2 = "1.0"
futures = "0.3"
itertools = "0.14"
log = "0.4"
num_cpus = "1.13"
once_cell = "1.0"
parking_lot = "0.12"
rand = "0.8"
rayon = "1.5"
serde = {version="1.0", features=["derive"]}
stack-string = "0.8"
tempfile = "3.2"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = { version="1.43", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
url = "2.2"

[dev-dependencies]
maplit = "1.0"

[[bin]]
name = "backup-app-rust"
path = "src/main.rs"
doc = false
