[package]
name = "backup_app_rust"
version = "0.5.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2024"

[package.metadata.deb]
name = "backup-app-rust"
priority = "optional"
section = "rust"
provides = "backup-app-rust"
extended-description = """Backup utility written in rust"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = {version="1.6", features=["behavior-version-latest"]}
aws-sdk-s3 = "1.79"
clap = {version="4.5", features=["derive"]}
deadqueue = "0.2"
derive_more = {version="2.0", features = ["full"]}
dirs = "6.0"
env_logger = {version="0.11", features=["color", "humantime", "regex"], default-features = false}
flate2 = "1.1"
futures = "0.3"
itertools = "0.14"
log = "0.4"
num_cpus = "1.16"
once_cell = "1.21"
parking_lot = "0.12"
rand = "0.9"
rayon = "1.10"
serde = {version="1.0", features=["derive"]}
stack-string = "1.1"
tempfile = "3.19"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
tokio = { version="1.44", features=["rt", "macros", "rt-multi-thread"]}
toml = "0.8"
url = "2.5"

[dev-dependencies]
maplit = "1.0"

[[bin]]
name = "backup-app-rust"
path = "src/main.rs"
doc = false
